--- a/Frontend/css/likes.css
+++ b/Frontend/css/likes.css
@@ -1,49 +1,73 @@
-/* TODO: Jelle; Ik krijg het niet voor elkaar om de footer menu niet te laten overlappen. */
-
 :root {
     --buttonColor1: #F15946;
     --buttonColor2: #FFBA49;
     --test1:#87CEFA;
     --test2:#ff7eb3;
-    --smallText: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
-    /* --smallText: 'Open Sans'; */
+    --color1 : #D8B7DD;
+    --color2:#cd96d7;
+    --fontsize1 : 15px;
+    color: #444;
 }
 
 #app {
+    /* zorgt ervoor dat de kleuren pulsen op een hoek van 45 graden in een loop*/
+    background: linear-gradient(45deg, var(--test1), var(--test2));
+}
+
+#appWrapper {
+    /* bepaald de lengte en positie van het stuk dat pulsed 
+    en zorgt dat het verandert van groote wanneer de groote van het scherm bepaalde formaten hebben*/
+    display: flex;
+    justify-content: center;
+    height: 100%;
+}
+
+#app {
+    /* ??? */
     display: flex;
     align-items: center;
     flex-direction: column;
-    height: 100%;
-    overflow-x: hidden;
-    background: linear-gradient(45deg, var(--gradient1), var(--gradient2));
-    background-size: 200% 200%;
-    /* Ensures the gradient shifts */
-    animation: pulseGradient 20s infinite;
-    /* Duration and infinite loop */
-}
-
-html,
-body {
-    /* bepaald de positie van het scherm */
     width: 100%;
     height: 100%;
-    margin: 0;
-    padding: 0;
 }
 
-@keyframes pulseGradient {
-    /* zorgt ervoor dat de kleuren #ffe67a en #ff7eb3 bewegen in een pulse animatie*/
-    0% {
-        background-position: 0% 0%;
+.likeApp{
+    gap: 20px;
+}
+
+.containment {
+    width: 80%;
+    margin-bottom: 20px;
+}
+
+/* styling for the heads */
+    #mutualList,#Userlist,#Partnerlist{
+        border-radius: 5px;
+        background-color: var(--color1);
+        padding-block: 18px;
+        text-align: center;
+        font-size: var(--fontsize1);
+        transition: 0.4s;
     }
 
-    50% {
-        background-position: 100% 100%;
+    #mutualList.active,#Userlist.active,#Partnerlist.active{
+        border-radius: 5px 5px 0 0;
+        background-color: var(--color2);
     }
+/* end */
 
-    100% {
-        background-position: 0% 0%;
-    }
+.accStyle {
+  background-color:  #D8B7DD;
+  justify-content: center;
+  padding-block: 18px;
+  display: flex;
+  text-align: center;
+  font-size: 15px;
+  transition: 0.4s;
+}
+
+.accStyle2 {
+  background-color:  #aab1dc;
 }
 
 li {
@@ -66,46 +90,6 @@ li {
     display: block;  /* or flex if needed */
     box-sizing: border-box;
     font-size: 22px;
-}
-.containment {
-    width: 100%;
-    padding: 20px 20px 20px 20px;
-}
-
-.accStyle {
-  background-color:  #D8B7DD;
-  justify-content: center;
-  align-items: center;
-  color: #444;
-  cursor: pointer;
-  padding: 18px 0px 18px 0px; /* padding here is OK */
-  border: none; /* remove border from here */
-  width: 100%;
-  box-sizing: border-box;
-  display: flex;
-  text-align: center;
-  outline: none;
-  font-size: 15px;
-  transition: 0.4s;
-  overflow: hidden;
-}
-
-.accStyle2 {
-  background-color:  #aab1dc;
-  justify-content: center;
-  align-items: center;
-  color: #444;
-  cursor: pointer;
-  padding: 18px 0px 18px 0px; /* padding here is OK */
-  border: none; /* remove border from here */
-  width: 100%;
-  box-sizing: border-box;
-  display: flex;
-  text-align: center;
-  outline: none;
-  font-size: 15px;
-  transition: 0.4s;
-  overflow: hidden;
 }
 
 ol, ul {
@@ -175,44 +159,17 @@ ol, ul {
 #likedList3 li span {
     flex-grow: 1;
 }
-  .active, .accordion:hover {
-    background-color: #cd96d7;; 
-  }
+.active, .accordion:hover {
+background-color: #cd96d7;; 
+}
   
-  .panels {
-    display: none;
-    background-color: white;
-    overflow: hidden;
-  } 
+.panels {
+display: none;
+border-radius: 0 0 5px 5px;
+background-color: white;
+} 
   
-#app {
-    /* zorgt ervoor dat de kleuren pulsen op een hoek van 45 graden in een loop*/
-    background: linear-gradient(45deg, var(--test1), var(--test2));
-    background-size: 200% 200%; /* ??? */
-    animation: pulseGradient 5s infinite;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-}
 
-#appWrapper {
-    /* bepaald de lengte en positie van het stuk dat pulsed 
-    en zorgt dat het verandert van groote wanneer de groote van het scherm bepaalde formaten hebben*/
-    display: flex;
-    justify-content: center;
-    height: 100%;
-}
-
-#app {
-    /* ??? */
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-}
 
 #menu {
     /* */
@@ -245,13 +202,6 @@ ol, ul {
 #menuContainer {
     /* settings van de balk waar de buttons op zitten die naar andere pagina's gaan*/
     background-color: var(--test1);
-    width: 100%;
-    z-index: 2;
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    bottom: 0;
-    left: 0;
 }
 
 .container {
@@ -278,18 +228,4 @@ filter-component .container {
     justify-content: space-evenly;
     /* height: 70%; */
     width: 100%;
-}
-
-@media only screen and (max-width: 750px) {
-    /* */
-    #app {
-        width: 100%;
-    }
-}
-
-@media only screen and (max-width: 450px) and (max-height: 700px) {
-    /* */
-    #app {
-        width: 100%;
-    }
 }
